# santa-beacon

./: .gitmodules  CMakeLists.txt  build.sh
client/: CMakeLists.txt  ledControllerInterface.h  main.cpp  rpiLedController.cpp  rpiLedController.h
client/inc/client/: client.h
common/: CMakeLists.txt  mqttCommunicator.cpp  pixel.cpp
common/inc/common/: communcator.h  config.h  mqttCommunicator.h  pixel.h  topics.h
controller/: CMakeLists.txt  main.cpp
controller/inc/controller/: controller.h
